Fix modal z-index
Should be on top of the header too

--- a/client/src/sass/include/_variables.scss
+++ b/client/src/sass/include/_variables.scss
@@ -167,12 +167,12 @@ $zindex: (
   popover         : 13000,
   tooltip         : 14000,
   loadbar         : 15000,
-  modal           : 16000,
   dropdown        : 17000,
   help-popover    : 17000,
   privacymsg      : 17500,
   header          : 17500,
   notification    : 18000,
+  modal           : 19000,
   hotkeys         : 19000
 );
 
